# cherry-evals

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SKILLS.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: export_agent.py  ingestion_agent.py  query_agent.py  reranker.py  search_agent.py
agents/prompts/: export.py  ingestion.py  safety.py  search.py
alembic/: env.py
alembic/versions/: 003_add_curation_events.py  004_add_users_and_api_keys.py  005_add_trial_ends_at.py  006_unique_user_email.py  007_unique_polar_customer_id.py  47e8ef9880f4_initial_schema_with_datasets_examples_.py
api/: deps.py  main.py
api/models/: collections.py  datasets.py  examples.py  export.py  search.py
api/routes/: account.py  agents.py  analytics.py  api_keys.py  billing.py  collections.py  datasets.py  examples.py  export.py  search.py
cherry_evals/: config.py
composer-1/: AGENTS.md  README.md  ROADMAP.md
docs/: ARCHITECTURE.md  COLLECTIVE_INTELLIGENCE.md  DEPLOYMENT_PLAN.md  SECURITY_AUDIT.md  VISION.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
gemini-3-pro/: README.md  ROADMAP.md
gpt-5-1-codex/: AGENTS.md
grok-code/: AGENTS.md  README.md  ROADMAP.md
landing/: index.html  script.js  style.css
mcp_server/: server.py
opus-4-5/: AGENTS.md  README.md  ROADMAP.md
scripts/: count_tokens.py  estimate_local_embedding_time.py  verify_embeddings.py  verify_mmlu.py
tests/: conftest.py
(+108 files in other folders)
